# RealEstateScraper

./: .replit  README.md  app.py  convert_icon.py  create_executable.py  data_processor.py  installer.bat  link_scraper.py  portfolio_tab.py  pyproject.toml  scraper.py  setup.bat  sheets_exporter.py  utils.py  web_content.py
.streamlit/: config.toml
