[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cairosvg>=2.7.1",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.56",
]
